--- a/07-07-20/SCDM_07-07-20.ipynb
+++ b/07-07-20/SCDM_07-07-20.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "source": [
     "## QE inputs :\n",
-    "### Energy cutoff plan-wave = 85 Ry \n",
+    "### Energy cutoff plane-wave = 85 Ry \n",
     "### Pseudo potentials = O_HSCV_PBE-1.0.UPF and H_HSCV_PBE-1.0.UPF\n",
     "\n",
     "\n",
@@ -896,7 +896,7 @@
    "source": [
     "#### norm calculation: $\\sum_{j}{\\Psi_{i}(j)^{*}\\Psi_{i}}(j)\\frac{\\Omega}{ngrid}=1$  from the Rieman sum of grid points in a cubic cell\n",
     "\n",
-    "#### Note: the canonical orbitals and SCDM orbitals in this analysis rounds the normalization to 1 as it is opposed to have the sum less 1. "
+    "#### Note: the canonical orbitals and SCDM orbitals in this analysis are rounded the normalization to 1 as it is opposed to have the sum less 1. "
    ]
   },
   {
@@ -4156,6 +4156,31 @@
     "plt.title('Spreads of isolated-SCDM Virtual orbitals')\n",
     "plt.xlabel('SCDM band')\n",
     "plt.ylabel('Spread ($Ang^{2}$)')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computing Charges on NERSC's Cori Haswell\n",
+    "\n",
+    "####  cost =  walltime in hours×number of nodes×QOS factor×charge factor\n",
+    "\n",
+    "### Water64 with nband = 3000 \n",
+    "\n",
+    "### QE calculations \n",
+    "#### NSCF(debug) : cost = 0.239 x 16  x 1 x 140 = 535.36 NERSC-hours\n",
+    "#### PW2WANNIER(premium) : cost = 3.281 x 1 x 2 x 140 = 918.68 NERSC-hours\n",
+    "### Softwares : \n",
+    "#### canonical + isolated SCDM orbitals with .npy format (bash) :  unknown hours \n",
+    "#### orbital spread calculations (bigmem) : cost = (1.283(3000 canonical) + 1.167(2744 scdm virtual) + 0.100(256 scdm occupied) ) x 1 x 1? x 140? = 357 NERSC-hours \n",
+    "\n",
+    "\n",
+    "### Notes:\n",
+    "#### 1. The Davidson diagonalization during the nscf calculation is currently limited to nband=3000 due to error in routine  cdiaghg (3053): problems computing cholesky. \n",
+    "#### 2. pw2wannier is a bottleneck but can get around by modifying pw2wannier source code to run in parallel.\n",
+    "#### 3. UNK file for 3000 canonical orbitals in water64 has about 0.35 GB in memory. "
    ]
   },
   {
