change file name

--- a/08-06-20/SCDM_08-06-20.ipynb
+++ b/08-06-20/SCDM_08-06-20.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Water64 sample\n",
     "\n",
-    "#### Investigating condition numbers in the first few sets of SCDM virtual bands from selected column by 2744-dim isolated SCDM "
+    "#### Investigating condition numbers in the first few sets of SCDM virtual bands from selected columns by 2744-dim isolated SCDM "
    ]
   },
   {
